2005-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: fixed absolute path to 
	tkEntry.h that confused 10.2 PBX.
	
	* unix/tcl.m4 (Darwin): added -single_module linker flag to
	TCL_SHLIB_LD_EXTRAS and TK_SHLIB_LD_EXTRAS.
	* unix/configure: autoconf-2.59

2005-04-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	* unix/tkUnixWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	* win/tkWinWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	Fix panic in wm stackorder when a toplevel is created on another
	diplay. The code now ignores toplevels that have a display
	that does not match the display of the parent window.
	[Bug 1152809]

2005-04-06  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n, doc/winfo.n, doc/tk.n, doc/send.n, doc/selection.n: 
	* doc/radiobutton.n, doc/photo.n, doc/options.n, doc/menu.n: 
	* doc/listbox.n, doc/getOpenFile.n, doc/font.n, doc/event.n: 
	* doc/entry.n, doc/clipboard.n, doc/checkbutton.n, doc/canvas.n: 
	* doc/button.n, doc/bind.n, doc/TextLayout.3, doc/MeasureChar.3: 
	* doc/GetRelief.3, doc/GetPixels.3, doc/GetJustify.3, doc/GetFont.3: 
	* doc/GetCursor.3, doc/GetColor.3, doc/GetBitmap.3, doc/GetAnchor.3: 
	* doc/FontId.3, doc/CrtWindow.3, doc/CrtImgType.3, doc/ConfigWidg.3: 
	* doc/3DBorder.3: Purge old .VS/.VE macro instances.

2005-04-04  Don Porter  <dgp@users.sourceforge.net>

	* library/comdlg.tcl:  Added Macintosh file type validation to
	[::tk::FDGetFileTypes].  [Bug 1083878]  (Thanks, Vince Darley)

2005-04-04  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: 
	* tests/text.test: fix to elide searching problems [Bug 1174269]
	and disappearing cursor with insertofftime 0 [Bug 1169429].

2005-04-03  Peter Spjuth  <peter.spjuth@space.se>

	* tests/grid.test:
	* generic/tkGrid.c: Fixed bug in geometry calculations for